--- a/notebook/agentchat_two_users.ipynb
+++ b/notebook/agentchat_two_users.ipynb
@@ -87,9 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'autogen' has no attribute 'config_list_from_json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\MindExpander\\Documents\\GitHub\\M1ndB0t_Aut0G3n\\notebook\\agentchat_two_users.ipynb Cell 5\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mautogen\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m config_list \u001b[39m=\u001b[39m autogen\u001b[39m.\u001b[39;49mconfig_list_from_json(\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mOAI_CONFIG_LIST\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     filter_dict\u001b[39m=\u001b[39m{\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmodel\u001b[39m\u001b[39m\"\u001b[39m: [\u001b[39m\"\u001b[39m\u001b[39mgpt-4\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mgpt4\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mgpt-4-32k\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mgpt-4-32k-0314\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mgpt-4-32k-v0314\u001b[39m\u001b[39m\"\u001b[39m],\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m     },\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/MindExpander/Documents/GitHub/M1ndB0t_Aut0G3n/notebook/agentchat_two_users.ipynb#W4sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'autogen' has no attribute 'config_list_from_json'"
+     ]
+    }
+   ],
    "source": [
     "import autogen\n",
     "\n",
@@ -502,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.6"
   },
   "vscode": {
    "interpreter": {
